<resources>
    <string name="app_name">Tare Zameen Foundation</string>

    <string name="login_title">Welcome Back</string>
    <string name="signup_title">Welcome</string>
    <string name="forgotpassword_title">Forgot Password</string>
    <string name="resetpassword_title">Reset Password</string>
    <string name="profile_title">Profile</string>
    <string name="editprofile_title">Edit Profile</string>


    //login textfield

    <string name="email_text">Email</string>
    <string name="emailhint_text">Enter Your Email</string>
    <string name="password_text">Password</string>
    <string name="passwordhint_text">Enter Your Password</string>

    // referal code

    <string name="referalcode_checkboxtext">If you have any referral Click here</string>
    <string name="referalcode_text">Referral ID </string>

    //forgot password

    <string name="recive_link">Didn\'t Receive the link? Click here </string>
    <string name="forgotpassword_text">Forgot Password? Click here </string>
    <string name="newsignup_text">New To TareZameen App? SignUp here </string>
    <string name="newlogin_text">Already have an Account? SignIn here </string>

    //reset password

    <string name="newpassword_text">New password </string>
    <string name="newpasswordhint_text">Enter a new password </string>
    <string name="reenter_password_text">Re-enter new password </string>

    //profile

    <string name="name_text">Name *</string>
    <string name="phone_text">Phone number *</string>
    <string name="mobile">Mobile</string>
    <string name="date_text">Date of Birth *</string>
    <string name="aadharcard_text">Aadhar Card *</string>
    <string name="startdate_text">Start Date</string>
    <string name="startdatehint_text">Date of joining</string>
    <string name="enddate_text">End Date *</string>
    <string name="designation_text">Designation *</string>
    <string name="college_text">College Name</string>
    <string name="resume_text">Upload Resume *</string>
    <string name="termandcondition_text">Accepting all terms and conditions</string>
    <!--    <string name="warning_text">kk</string>-->
    <string name="warning_text">Before Clicking on Submit please check all the information uploaded previously is correct as this will reflect in your certificate. If any kind of help or assistance required please press on "Contact Us"</string>
    <string name="contactus_text">Contact Us</string>


    //buttons text

    <string name="login_text">Login</string>
    <string name="signup_text">SignUp</string>
    <string name="reset_text">Reset</string>
    <string name="confirm_text">Confirm</string>
    <string name="submit_text">Submit</string>
    <string name="next_text">Next</string>
    <string name="sharenow_text">Share Now</string>
    <string name="donatetext">DONATE</string>
    <string name="description">Description</string>
    <string name="redeemtext">REDEEM</string>
    <string name="descriptionTxt">Description</string>
    <string name="rewardhistorytxt">REWARD HISTORY</string>
    <string name="tenureCompletiontxt">Tenure Completion</string>
    <string name="congratulationstxt">congratulations!!!</string>
    <string name="upload">UPLOAD!!!</string>
    <string name="uploadbtn">UPLOAD</string>
    <string name="download">DOWNLOAD </string>

    <string-array name="locale_array">
        <item>Select Designation *</item>
        <item>Dummy data2</item>
        <item>Dummy data3</item>
    </string-array>


    //error message

    <string name="emailerror_msg">Please Enter your Email</string>
    <string name="passworderror_msg">Please Enter your Password</string>
    <string name="notvalidemail_msg">Please Enter Valid Email</string>
    <string name="notvalireferalcode_msg">Please Enter Valid Referalcode</string>
    <string name="notmatchpassword_msg">Password could not match</string>
    <string name="notvalidpassword_msg">Password must contain mix of upper and lower case letters as well as digits and one special charecter(8-20)"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="referral">Referral Program</string>
    <string name="referralcodeTxt">Referral Code</string>
    <string name="tapToCopyTxt">Tap to Copy</string>
    <string name="yourreferralTxt">Your Referrals</string>
    <string name="activeTxt">Active participants</string>
    <string name="successTxt">Successful participants</string>
    <string name="inactiveTxt">InActive participants</string>
    <string name="fundraiserTxt">FUNDRAISER </string>
    <string name="activitytrackertxt">Activity Tracker </string>
    <string name="LeaderboardTxt">Leaderboard </string>
    <string name="noteTxt">Note: For getting rewards your active participants should atleast rise Rs.750.</string>


    <string name="coinsTxt">Coins Earned</string>
    <string name="activatedtabTxt">These tabs will be activated at the end of your tenure completion.</string>
    <string name="donateorredeemxt">You can either choose to donate to the organization or redeem your coins in the form of Amazon Coupons.</string>
    <string name="totalfunds">Total funds raised above minimum threshold</string>
    <string name="instgramtxt">Instagram liking on</string>
    <string name="linkedintxt">LinkedIn sharing on</string>
    <string name="thankyoutxt">Thankyou for your hardwork and completing you tenure. We appreciate it and are thankful.</string>
    <string name="amazonetxt">Your amazon coupons will be sent to you on your registered email-id.</string>
    <string name="donatelines">You have worked hard for the money that you donated to us. appreciate it and are thankful.</string>
    <string name="donateTxt2">We’ve got a lot of work ahead of us, and your donation has made it that much easier to get things done and thrust us forward</string>
    <string name="donemsgtxt">You have successfully completed your internship at TareZameen Foundation.</string>
    <string name="continuemsg">Do you want to continue working at TareZameen Foundation?</string>
    <string name="yesnotxt">Yes/No</string>
    <string name="videolinktxt">Please upload a testimonial video sharing your experiance working at TareZameen Foundation.*</string>
    <string name="ratefoundation">Please rate our foundation at the link given below.*</string>
    <string name="rateonplaystore">Please rate our app on playstore (link below)*</string>
    <string name="donemsg">If done , please confirm by clicking here</string>
    <string name="notemsg">* marked field are mandatory</string>
    <string name="sorrymsg">Sorry! But unfortunately you have not raised minimum required fund for the organization.</string>
    <string name="accountactivationmsg">Your account will be active for the next 1 month please do the needful by raising the minimum fund required to
    duly receive your internship at the earliest</string>

    <string name="raisedamount">Your raised amount is Rs 1250</string>
    <string name="minimumamount">The minimum required amount is Rs 1250</string>
    <string name="goodworktxt">It was great working and having you onboard with us !!! </string>
    <string name="falltxt">You fall under the Bronze category!</string>
    <string name="downloadcerificate">Please download your certificate.</string>
    <string name="clickherelink">Please click here to access the link</string>
    <string name="emailsenttxt">You will also shortly receive your certificate on your registered email ID </string>

</resources>