<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screens.Activities.RewardCoinsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/secondBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/common_20_size"
            android:background="@drawable/ic_backarrow"
            android:backgroundTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/common_20_size"
            android:visibility="gone" />
    </RelativeLayout>



    <LinearLayout
        android:id="@+id/coinsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/common_20_size"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="REWARD COINS"
            android:textColor="@color/purple"
            android:textSize="@dimen/common_25_size"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/coinTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/common_30_size"
                android:text="@string/coinsTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/common_20_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/common_30_size"
                android:layout_height="@dimen/common_30_size"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_20_size"
                android:layout_marginRight="@dimen/common_20_size"
                android:background="@drawable/dollar_ic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="@dimen/common_30_size"
                android:layout_weight="1"
                android:gravity="end"
                android:text="1275"
                android:textColor="@color/black"
                android:textSize="@dimen/common_25_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coinsLayout"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRewardHistory"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_30_size"
                android:layout_marginTop="@dimen/common_30_size"
                android:layout_marginRight="@dimen/common_30_size"
                android:background="@drawable/rectangle_bg"
                android:backgroundTint="#F0DBBF"
                android:paddingLeft="@dimen/common_30_size"
                android:paddingRight="@dimen/common_30_size"
                android:text="@string/rewardhistorytxt"
                android:textColor="@color/referalBg"
                android:textSize="@dimen/common_20_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_15_size"
                android:layout_marginTop="@dimen/common_30_size"
                android:layout_marginRight="@dimen/common_15_size"
                android:gravity="start"
                android:text="@string/activatedtabTxt"
                android:textColor="@color/black"
                android:textSize="@dimen/common_18_size"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_15_size"
                android:layout_marginTop="@dimen/common_20_size"
                android:layout_marginRight="@dimen/common_15_size"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/white"
                android:dividerHeight="0.0px"
                android:elevation="8dp"
                app:cardCornerRadius="50dp"
                card_view:cardElevation="10dp"
                card_view:cardPreventCornerOverlap="false">

                <Button
                    android:id="@+id/btnDonate"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/donatetext"
                    android:textColor="@color/referalBg"
                    android:textSize="@dimen/common_30_size" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_15_size"
                android:layout_marginTop="@dimen/common_20_size"
                android:layout_marginRight="@dimen/common_15_size"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:divider="@android:color/white"
                android:dividerHeight="0.0px"
                android:elevation="8dp"
                app:cardCornerRadius="50dp"
                card_view:cardElevation="10dp"
                card_view:cardPreventCornerOverlap="false">

                <Button
                    android:id="@+id/btnRedeem"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/redeemtext"
                    android:textColor="@color/referalBg"
                    android:textSize="@dimen/common_30_size" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_15_size"
                android:layout_marginTop="@dimen/common_25_size"
                android:layout_marginRight="@dimen/common_15_size"
                android:gravity="start"
                android:text="@string/donateorredeemxt"
                android:textColor="@color/black"
                android:textSize="@dimen/common_18_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/bottombar"
        layout="@layout/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/coinsLayout"
        android:layout_alignParentBottom="true" />
</RelativeLayout>