<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screens.Activities.TenureCompletionActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/common_20_size"
        android:background="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/congratulationstxt"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="@dimen/common_25_size" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/donemsgtxt"
            android:textColor="@color/orange"
            android:textSize="@dimen/common_20_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:text="@string/continuemsg"
            android:textColor="@color/black"
            android:textSize="@dimen/common_20_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yesBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_10_size"
                android:layout_marginRight="@dimen/common_10_size"
                android:background="@color/purple"
                android:gravity="center"
                android:text="Yes"
                android:textColor="@color/white"
                android:textSize="@dimen/common_16_size" />

            <Button
                android:id="@+id/noBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/common_10_size"
                android:layout_marginRight="@dimen/common_10_size"
                android:background="@color/purple"
                android:gravity="center"
                android:text="No"
                android:textColor="@color/white"
                android:textSize="@dimen/common_16_size" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>